error del modelo y predicción

--- a/clasificadorLunares.ipynb
+++ b/clasificadorLunares.ipynb
@@ -13,16 +13,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_path = \"/home/santi/personalProjects/deeplearning_udemy/reconocimiento_lunares/datasetLunares/dysplasticNevi/train/dysplasticNevi1.jpg\""
+    "import constant"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_path = constant.LOCAL_PATH + \"datasetLunares/dysplasticNevi/train/dysplasticNevi1.jpg\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,13 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "paths = [\n",
-    "    \"/home/santi/personalProjects/deeplearning_udemy/reconocimiento_lunares/datasetLunares/dysplasticNevi/train/\",\n",
-    "    \"/home/santi/personalProjects/deeplearning_udemy/reconocimiento_lunares/datasetLunares/spitzNevus/train/\"\n",
+    "    constant.LOCAL_PATH + \"datasetLunares/dysplasticNevi/train/\",\n",
+    "    constant.LOCAL_PATH + \"datasetLunares/spitzNevus/train/\"\n",
     "]"
    ]
   },
@@ -297,6 +306,63 @@
     "fig, ax = plt.subplots(subplot_kw={\"projection\": \"3d\"})\n",
     "\n",
     "ax.plot_surface(X,Y,Z, cmap=cm.Blues)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.15 vs 0.85\n"
+     ]
+    }
+   ],
+   "source": [
+    "#error de entrenamiento\n",
+    "\n",
+    "prediction = 1*(W[0] + np.dot(features,W[1::]))>=0\n",
+    "\n",
+    "prediction = 2*prediction-1\n",
+    "\n",
+    "error=np.sum(prediction != labels.reshape(-1,1))/len(labels)\n",
+    "\n",
+    "efectividad = 1-error\n",
+    "\n",
+    "print(error, \"vs\", efectividad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "es un spitzNevus\n"
+     ]
+    }
+   ],
+   "source": [
+    "#prediccion para una imagen\n",
+    "\n",
+    "path_img= constant.LOCAL_PATH + 'datasetLunares/spitzNevus/train/spitzNevus5.jpg'\n",
+    "\n",
+    "img=cv2.imread(path_img)\n",
+    "\n",
+    "feature_vector=np.array(getFeatures(img))\n",
+    "\n",
+    "result=np.sign(W[0]+np.dot(feature_vector,W[1::]))\n",
+    "\n",
+    "if result == -1:\n",
+    "    print(\"es un dysplasticNevi\")\n",
+    "else:\n",
+    "    print(\"es un spitzNevus\")"
    ]
   }
  ],
